--- a/src/test/resources/website-snippets/pedestrian-groups.yml
+++ b/src/test/resources/website-snippets/pedestrian-groups.yml
@@ -2,10 +2,10 @@ incarnation: protelis
 
 variables:
   group1: &group1
-    formula: it.unibo.alchemist.model.implementations.groups.GroupFactory.friends()
+    formula: it.unibo.alchemist.model.cognitive.groups.GroupFactory.friends()
     language: kotlin
   group2: &group2
-    formula: it.unibo.alchemist.model.implementations.groups.GroupFactory.friends()
+    formula: it.unibo.alchemist.model.cognitive.groups.GroupFactory.friends()
     language: kotlin
 
 deployments:
