--- a/alchemist-cognitive-agents/src/test/resources/blended-gradients.yml
+++ b/alchemist-cognitive-agents/src/test/resources/blended-gradients.yml
@@ -7,7 +7,7 @@ variables:
     formula: "\"exit2\""
 
 environment:
-  type: Continuous2DEnvironment
+  type: ContinuousPhysics2DEnvironment
 
 seeds:
   scenario: 0
