--- a/alchemist-cognitive-agents/src/test/resources/follow-flow-field.yml
+++ b/alchemist-cognitive-agents/src/test/resources/follow-flow-field.yml
@@ -5,7 +5,7 @@ variables:
     formula: "\"target\""
 
 environment:
-  type: Continuous2DEnvironment
+  type: ContinuousPhysics2DEnvironment
 
 seeds:
   scenario: 0
