--- a/alchemist-loading/src/test/resources/testSpecificPositions.yml
+++ b/alchemist-loading/src/test/resources/testSpecificPositions.yml
@@ -1,8 +1,7 @@
 incarnation: sapere
 
 environment:
-  type: Continuous2DEnvironment
-  parameters: []
+  type: ContinuousPhysics2DEnvironment
 
 deployments:
   type: SpecificPositions
