--- a/alchemist-cognitive-agents/src/test/resources/feels-transmission-with-layer.yml
+++ b/alchemist-cognitive-agents/src/test/resources/feels-transmission-with-layer.yml
@@ -5,7 +5,7 @@ variables:
     formula: '"danger"'
 
 environment:
-  type: Continuous2DEnvironment
+  type: ContinuousPhysics2DEnvironment
 
 seeds:
   scenario: 0
