--- a/alchemist-cognitive-agents/src/test/resources/wander.yml
+++ b/alchemist-cognitive-agents/src/test/resources/wander.yml
@@ -1,7 +1,7 @@
 incarnation: protelis
 
 environment:
-  type: Continuous2DEnvironment
+  type: ContinuousPhysics2DEnvironment
 
 seeds:
   scenario: 0
