--- a/alchemist-euclidean-geometry/src/test/resources/levywalk.yml
+++ b/alchemist-euclidean-geometry/src/test/resources/levywalk.yml
@@ -1,5 +1,8 @@
 incarnation: protelis
 
+environment:
+  type: ContinuousPhysics2DEnvironment
+
 deployments:
   - type: Circle
     parameters: [50, 0, 0, 200]
