--- a/alchemist-loading/src/test/resources/guidedTour/environmentQualifiedName.yml
+++ b/alchemist-loading/src/test/resources/guidedTour/environmentQualifiedName.yml
@@ -1,3 +1,3 @@
 incarnation: protelis
 environment:
-  type: it.unibo.alchemist.model.physics.environments.Continuous2DEnvironment
+  type: it.unibo.alchemist.model.environments.Continuous2DEnvironment
