--- a/src/test/resources/website-snippets/batch-pedestrian-simulation.yml
+++ b/src/test/resources/website-snippets/batch-pedestrian-simulation.yml
@@ -1,5 +1,8 @@
 incarnation: protelis
 
+environment:
+  type: ContinuousPhysics2DEnvironment
+
 variables:
   pedestrianNumber: &pedestrianNumber
     type: LinearVariable
