--- a/src/test/resources/website-snippets/envtype-fullyqualified-protelis.yml
+++ b/src/test/resources/website-snippets/envtype-fullyqualified-protelis.yml
@@ -1,3 +1,3 @@
 incarnation: protelis
 environment:
-  type: it.unibo.alchemist.model.physics.environments.Continuous2DEnvironment
+  type: it.unibo.alchemist.model.environments.Continuous2DEnvironment
