--- a/src/test/resources/website-snippets/evacuation-scenarios.yml
+++ b/src/test/resources/website-snippets/evacuation-scenarios.yml
@@ -5,7 +5,7 @@ variables:
     formula: "\"danger\""
 
 environment:
-  type: Continuous2DEnvironment
+  type: ContinuousPhysics2DEnvironment
 
 layers:
   - type: BidimensionalGaussianLayer
