--- a/src/test/resources/website-snippets/pedestrian-groups.yml
+++ b/src/test/resources/website-snippets/pedestrian-groups.yml
@@ -1,5 +1,8 @@
 incarnation: protelis
 
+environment:
+  type: ContinuousPhysics2DEnvironment
+
 variables:
   group1: &group1
     formula: it.unibo.alchemist.model.cognitive.groups.GroupFactory.friends()
