--- a/src/test/resources/website-snippets/steering-strategies.yml
+++ b/src/test/resources/website-snippets/steering-strategies.yml
@@ -1,7 +1,7 @@
 incarnation: protelis
 
 environment:
-  type: Continuous2DEnvironment
+  type: ContinuousPhysics2DEnvironment
 
 _reactions: &behavior
   - time-distribution:
