refactor!: more refactoring (squash this commit)

--- a/alchemist-incarnation-protelis/src/test/resources/customnodes.yml
+++ b/alchemist-incarnation-protelis/src/test/resources/customnodes.yml
@@ -7,5 +7,5 @@ deployments:
   - type: Circle
     parameters: [50, 0, 0, 20]
     nodes:
-      type: it.unibo.alchemist.test.CustomNode
+      type: it.unibo.alchemist.model.protelis.CustomNode
       parameters: []
