test(cognitive-agents): avoid using JSR223 variables when a plain string suffices (should improve build performance)

--- a/alchemist-cognitive-agents/src/test/resources/blended-gradients.yml
+++ b/alchemist-cognitive-agents/src/test/resources/blended-gradients.yml
@@ -1,10 +1,9 @@
 incarnation: protelis
 
-variables:
-  exit1: &exit1
-    formula: "\"exit1\""
-  exit2: &exit2
-    formula: "\"exit2\""
+_exit1: &exit1
+  exit1
+_exit2: &exit2
+  exit2
 
 environment:
   type: ContinuousPhysics2DEnvironment
