--- a/alchemist-cognitive-agents/src/test/resources/feels-transmission-with-layer.yml
+++ b/alchemist-cognitive-agents/src/test/resources/feels-transmission-with-layer.yml
@@ -1,8 +1,7 @@
 incarnation: protelis
 
-variables:
-  danger: &danger
-    formula: '"danger"'
+_danger: &danger
+  danger
 
 environment:
   type: ContinuousPhysics2DEnvironment
