--- a/alchemist-cognitive-agents/src/test/resources/follow-flow-field.yml
+++ b/alchemist-cognitive-agents/src/test/resources/follow-flow-field.yml
@@ -1,8 +1,7 @@
 incarnation: protelis
 
-variables:
-  target: &target
-    formula: "\"target\""
+_target: &target
+  target
 
 environment:
   type: ContinuousPhysics2DEnvironment
