feat(alchemist-loading): change output-monitors to monitors

--- a/alchemist-loading/src/test/resources/testmonitors.yml
+++ b/alchemist-loading/src/test/resources/testmonitors.yml
@@ -8,5 +8,5 @@ environment:
         parameters: [1.0]
       type: GlobalTestReaction
 
-output-monitors:
+monitors:
   - type: another.location.SimpleMonitor
