feat: implement feature flags

--- a/src/main/resources/it/unibo/alchemist/cli/CLI.properties
+++ b/src/main/resources/it/unibo/alchemist/cli/CLI.properties
@@ -72,6 +72,12 @@ var_argNumber = Infinity
 var_separator = ,
 var_argName = var1,var2,...
 
+f_longName = feature-flags
+f_description = Experimental feature flags that may affect simulation in an unexpected way, use at your own risk
+f_argNumber = Infinity
+f_separator = ,
+f_argName = flag1,flag2,...
+
 v_longName = verbose
 v_description = Verbose mode: prints info-level informations. Slows the simulator down.
 
