--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -46,6 +46,8 @@ guava = "com.google.guava:guava:31.1-jre"
 ignite-core = { module = "org.apache.ignite:ignite-core", version.ref = "ignite" }
 ignite-indexing = { module = "org.apache.ignite:ignite-indexing", version.ref = "ignite" }
 ignite-spring = { module = "org.apache.ignite:ignite-spring", version.ref = "ignite" }
+jackson = "com.fasterxml.jackson.module:jackson-module-kotlin:2.15.1"
+jackson-yaml = "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.15.1"
 javafxSvg = "de.codecentric.centerdevice:javafxsvg:1.3.0"
 javalib-java7 = "org.danilopianini:javalib-java7:0.6.1"
 jfoenix = "com.jfoenix:jfoenix:9.0.10"
@@ -65,6 +67,7 @@ kotest-assertions = { module = "io.kotest:kotest-assertions-core", version.ref =
 kotest-framework-engine = { module = "io.kotest:kotest-framework-engine", version.ref = "kotest" }
 kotest-framework-datatest = { module = "io.kotest:kotest-framework-datatest", version.ref = "kotest" }
 kotest-runner = { module = "io.kotest:kotest-runner-junit5-jvm", version.ref = "kotest" }
+kotlin-cli = "org.jetbrains.kotlinx:kotlinx-cli:0.3.5"
 kotlin-coroutines-core = "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.0"
 kotlin-test-common = { module = "org.jetbrains.kotlin:kotlin-test-common", version.ref = "kotlin" }
 kotlin-test-annotations = { module = "org.jetbrains.kotlin:kotlin-test-annotations-common", version.ref = "kotlin" }
