feat: add missing engine configs

--- a/alchemist-benchmark/src/jmh/resources/options.yml
+++ b/alchemist-benchmark/src/jmh/resources/options.yml
@@ -1,4 +1,7 @@
 graphicsPath: alchemist-benchmark/effects/simulation.json
 endTime: 50
-engineMode: deterministic
-verbosity: info
+engineConfig:
+  engineMode: batchEpsilon
+  epsilon: 0.01
+  outputReplayStrategy: replay
+verbosity: warn
