--- a/alchemist-benchmark/src/jmh/resources/simulation.yml
+++ b/alchemist-benchmark/src/jmh/resources/simulation.yml
@@ -1,7 +1,20 @@
 incarnation: protelis
 
+_test:
+  str: replaceme
+  int: 1
+  dbl: 0.2
+  strL: [ a, b ]
+  intL: [ 1, 2 ]
+  dblL: [ 1.0, 2.0, 3.0 ]
+  arr:
+    - nst1-1: replaceme
+      nst1-2: replaceme
+    - nst2-1:
+        - nst2-1-1: replaceme
+
 _simulation-configuration:
-  launcher: SingleRunSwingUI
+  launcher: HeadlessSimulationLauncher
   graphics-path: alchemist-benchmark/effects/simulation.json
   end-time: 50
   engine-configuration:
@@ -12,7 +25,7 @@ _simulation-configuration:
 
 network-model:
   type: ConnectWithinDistance
-  parameters: [0.5]
+  parameters: [ 0.5 ]
 
 _gradient: &gradient
   - time-distribution: 1
@@ -21,16 +34,16 @@ _gradient: &gradient
 
 deployments:
   type: Grid
-  parameters: [-5, -5, 5, 5, 0.25, 0.25, 0.1, 0.1]
+  parameters: [ -5, -5, 5, 5, 0.25, 0.25, 0.1, 0.1 ]
   contents:
     - in:
         type: Rectangle
-        parameters: [-6, -6, 2, 2]
+        parameters: [ -6, -6, 2, 2 ]
       molecule: source
       concentration: true
     - in:
         type: Rectangle
-        parameters: [4, 4, 6, 6]
+        parameters: [ 4, 4, 6, 6 ]
       molecule: destination
       concentration: true
   programs: *gradient
