feat: refactor launcher config format

--- a/alchemist-benchmark/src/jmh/resources/simulation.yml
+++ b/alchemist-benchmark/src/jmh/resources/simulation.yml
@@ -1,8 +1,9 @@
 incarnation: protelis
 
-simulation-configuration:
-  end-time: 50
-  engine-configuration:
+launcher:
+  type: HeadlessSimulationLauncher
+  parameters:
+    end-time: 50
     output-replay-strategy: aggregate
 
 network-model:
