--- a/src/test/resources/override-test.yml
+++ b/src/test/resources/override-test.yml
@@ -1,14 +1,14 @@
-simulation-configuration:
-  launcher: HeadlessSimulationLauncher
-  variables: [1, 2, a]
-  parallelism: 1
-  end-time: 50
-  is-web: true
-  is-batch: true
-  distributed-configuration-path: foo-bar
-  graphics-path: foo-bar
-  server-configuration-path: foo-bar
-  engine-configuration:
+launcher:
+  type: HeadlessSimulationLauncher
+  parameters:
+    variables: [1, 2, a]
+    parallelism: 1
+    end-time: 50
+    is-web: true
+    is-batch: true
+    distributed-configuration-path: foo-bar
+    graphics-path: foo-bar
+    server-configuration-path: foo-bar
     engine-mode: batchEpsilon
     epsilon: 0.01
     output-replay-strategy: replay
