--- a/alchemist-loading/src/test/resources/override/testOverride.yml
+++ b/alchemist-loading/src/test/resources/override/testOverride.yml
@@ -1,8 +1,5 @@
 foo: bar
 
-__ignored:
-  x: foo
-
 _test:
   str: replaceme
   int: 1
@@ -15,3 +12,8 @@ _test:
       nst1-2: replaceme
     - nst2-1:
         - nst2-1-1: replaceme
+  map:
+    elem1: replaceme
+    elem2:
+      key1: replaceme
+      key2: replaceme
