feat: implement config override

--- a/src/test/resources/config/config-test.yml
+++ b/src/test/resources/config/config-test.yml
@@ -1,8 +1,8 @@
 launcher:
-  type: HeadlessSimulationLauncher
+  type: TestLauncher
   parameters:
     variables: [1, 2, a]
-    parallelism: 1
+    parallelism: 8
     end-time: 50
     is-web: true
     is-batch: true
@@ -11,4 +11,5 @@ launcher:
     server-configuration-path: foo-bar
     engine-mode: batchEpsilon
     epsilon: 0.01
+    batch-size: 10
     output-replay-strategy: replay
