--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,8 @@
 antlr4 = "4.13.1"
 arrow = "1.2.1"
 graphhopper = "7.0"
+graphql-server = "6.5.3"
+graphql-server-ktor = "7.0.0-alpha.6"
 graphstream = "2.0"
 ignite = "2.15.0"
 junit = "5.10.0"
@@ -37,6 +39,8 @@ dyn4j = "org.dyn4j:dyn4j:5.0.1"
 dsiutils = "it.unimi.dsi:dsiutils:2.7.3"
 embedmongo = "de.flapdoodle.embed:de.flapdoodle.embed.mongo:4.9.2"
 graphhopper-core = { module = "com.graphhopper:graphhopper-core", version.ref = "graphhopper" }
+graphql-server = { module = "com.expediagroup:graphql-kotlin-server", version.ref = "graphql-server" }
+graphql-server-ktor = { module = "com.expediagroup:graphql-kotlin-ktor-server", version.ref = "graphql-server-ktor" }
 graphstream-algo = { module = "org.graphstream:gs-algo", version.ref = "graphstream" }
 graphstream-core = { module = "org.graphstream:gs-core", version.ref = "graphstream" }
 groovy-jsr223 = "org.codehaus.groovy:groovy-jsr223:3.0.19"
@@ -77,6 +81,7 @@ ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-js = { module = "io.ktor:ktor-client-js", version.ref = "ktor" }
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-serialization = { module = "io.ktor:ktor-serialization", version.ref = "ktor" }
+ktor-serialization-jackson = { module = "io.ktor:ktor-serialization-jackson", version.ref = "ktor" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 ktor-server-compression = { module = "io.ktor:ktor-server-compression", version.ref = "ktor" }
 ktor-server-content-negotiation = { module = "io.ktor:ktor-server-content-negotiation", version.ref = "ktor" }
@@ -84,6 +89,7 @@ ktor-server-cors = { module = "io.ktor:ktor-server-cors", version.ref = "ktor" }
 ktor-server-core-jvm = { module = "io.ktor:ktor-server-core-jvm", version.ref = "ktor" }
 ktor-server-netty = { module = "io.ktor:ktor-server-netty", version.ref = "ktor" }
 ktor-server-test-host = { module = "io.ktor:ktor-server-test-host", version.ref = "ktor" }
+ktor-server-websockets = { module = "io.ktor:ktor-server-websockets-jvm", version.ref = "ktor" }
 leafletmap = "org.danilopianini:de.saring.leafletmap:1.0.5"
 listset = "org.danilopianini:listset:0.3.9"
 logback = "ch.qos.logback:logback-classic:1.4.11"
@@ -115,17 +121,20 @@ trove4j = "net.sf.trove4j:trove4j:3.0.3"
 
 [bundles]
 graphhopper = [ "graphhopper-core" ]
+graphql-server = [ "graphql-server", "graphql-server-ktor" ]
 jiconfont = [ "jiconfont-javafx", "jiconfont-materialDesignIcons" ]
 kotlin-react = [ "kotlin-react", "kotlin-react-dom" ]
 ktor-client = [ "ktor-client-js", "ktor-client-content-negotiation", "ktor-serialization-kotlinx-json" ]
 ktor-server = [
     "ktor-serialization",
+    "ktor-serialization-jackson",
     "ktor-serialization-kotlinx-json",
     "ktor-server-compression",
     "ktor-server-content-negotiation",
     "ktor-server-cors",
     "ktor-server-core-jvm",
-    "ktor-server-netty"
+    "ktor-server-netty",
+    "ktor-server-websockets"
 ]
 protelis = [ "protelis-interpreter", "protelis-lang" ]
 scala = [ "scala-compiler", "scala-library" ]
@@ -142,6 +151,7 @@ testing-runtimeOnly = [ "junit-engine" ]
 [plugins]
 dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 gitSemVer = "org.danilopianini.git-sensitive-semantic-versioning-gradle-plugin:1.1.10"
+graphql-server = { id = "com.expediagroup.graphql", version.ref = "graphql-server" }
 hugo = "io.github.fstaudt.hugo:0.6.1"
 java-qa = "org.danilopianini.gradle-java-qa:1.17.0"
 kotest-multiplatform = { id = "io.kotest.multiplatform", version.ref = "kotest" }
@@ -149,6 +159,7 @@ kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref 
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kotlin-qa = "org.danilopianini.gradle-kotlin-qa:0.49.1"
+ktor = { id = "io.ktor.plugin", version.ref = "ktor" }
 multiJvmTesting = "org.danilopianini.multi-jvm-test-plugin:0.5.5"
 publishOnCentral = "org.danilopianini.publish-on-central:5.0.13"
 scalafmt = "cz.alenkacz.gradle.scalafmt:1.16.2"
