fix(grid): fix server launcher

--- a/alchemist-grid/src/test/resources/config/00-dependencies.yml
+++ b/alchemist-grid/src/test/resources/config/00-dependencies.yml
@@ -3,7 +3,8 @@ incarnation: sapere
 launcher:
   type: DistributedExecution
   parameters:
-    distributed-config-path: config/dependencies_test.txt
+    variables: []
+    distributedConfigPath: config/dependencies_test.txt
 
 remote-dependencies:
   - config/dependencies_test.txt
