fix(web-renderer): fix test

--- a/alchemist-web-renderer/src/commonTest/resources/yaml/sapere.yml
+++ b/alchemist-web-renderer/src/commonTest/resources/yaml/sapere.yml
@@ -7,6 +7,9 @@
 
 incarnation: sapere
 
+launcher:
+  type: WebRendererLauncher
+
 network-model:
   type: ConnectWithinDistance
   parameters: [0.5]
