feat!: new command line (#2495)
* feat: add benchmark module

* feat: add jmh benchmark support

* feat: add readme

* feat: improve readme, change benchmark mode to throughput

* feat: implement batch engine placeholder

* feat: add engine builder, continue work on batched engine

* fix: fix termination check, fix concurrency issues, fix event time validation

* feat: improve termination, fix multithreaded benchmark

* feat: implement feature flags

* feat: refactor BatchEngine, improve thread safety

* feat: implement epsilon batching

* feat: add more benchmarks

* fix: fix step update calculation

* fix: fix currentTime update

* chore: add documentation

* feat: disable caller check in batch engine

* feat: add output replay strategy flag

* feat: implement kotlin engine

* fix: fix output monitor time

* feat: refactor and documentation

* feat: refactor main

* fix: fix cli

* feat: change verbosity codes

* feat: add missing engine configs

* feat: refactor config to simulation yml file

* feat: implement override

* feat: add variables override test

* feat: refactor variables overrider

* feat: implement configuration override

* feat: fix loading

* feat: update arguments --help documentation

* feat: change simulation-configuration key

* feat: refactor launcher config format

* feat: improve variables override

* feat: implement config override

* feat: improve test

* fix: make launcher optional

* feat: refactor

* fix: fix syntax

* feat: add missing documentation, remove unsued, refactor

* feat: refactor sona-type suggestions

* fix: fix compilation issue

* fix: refactor detekt

* feat: add java doc in engine

* feat: checkstyle javadoc

* feat: refactor pmd style

* feat: refactor codestyle

* feat: ignore unsolvable findbugs warning

* feat: refactor pmd

* revert(benchmarks): remove benchmark module

* revert(api): restore api module

* revert(

--- a/alchemist-full/src/test/resources/simulation.yml
+++ b/alchemist-full/src/test/resources/simulation.yml
@@ -1,5 +1,9 @@
 incarnation: protelis
 
+terminate:
+  - type: AfterTime
+    parameters: 1
+
 network-model:
   type: ConnectWithinDistance
   parameters: [0.5]
