--- a/alchemist-grid/src/test/resources/config/00-dependencies.yml
+++ b/alchemist-grid/src/test/resources/config/00-dependencies.yml
@@ -1,4 +1,11 @@
 incarnation: sapere
+
+launcher:
+  type: DistributedExecution
+  parameters:
+    variables: []
+    distributedConfigPath: config/dependencies_test.txt
+
 remote-dependencies:
   - config/dependencies_test.txt
   - config/dependencies_test1.txt
