--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,20 +1,5 @@
 pull_request_rules:
 
-# This rule is disabled due to: 
-#   - name: Auto-rebase if appropriately labeled or if the author is an authorized bot
-#     conditions:
-#       - or:
-#         - label=auto-update-rebase
-#         - and:
-#             - label=dependencies
-#             - or: &authors_are_bots
-#                 - author=renovate[bot]
-#                 - author=dependabot[bot]
-#       - -draft
-#       - -conflict
-#     actions:
-#       rebase:
-
   - name: Auto-update with merge if appropriately labeled
     conditions:
       - label=auto-update-merge
@@ -53,3 +38,16 @@ pull_request_rules:
           This pull request has conflicts :confounded:
           Could you fix it? :wrench:
           Thank you! :pray:
+
+  - name: Auto-rebase if appropriately labeled or if the author is an authorized bot
+    conditions:
+      - or:
+        - label=auto-update-rebase
+        - and:
+            - label=dependencies
+            - or: *authors_are_bots
+      - -draft
+      - -conflict
+    actions:
+      rebase:
+        bot_account: danysk
