--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
+[submodule "src/main/hugo/themes/hugo-theme-relearn"]
+	path = site/themes/hugo-theme-relearn
+	url = https://github.com/McShelby/hugo-theme-relearn.git
+	shallow = true
 [submodule "site/content/tutorials/scafi/learning-scafi-alchemist"]
 	path = external-resources/learning-scafi-alchemist
 	url = https://github.com/scafi/learning-scafi-alchemist.git
