chore(alchemist-graphql): improve project description
Co-authored-by: Danilo Pianini <danilo.pianini@gmail.com>

--- a/alchemist-graphql/gradle.properties
+++ b/alchemist-graphql/gradle.properties
@@ -10,7 +10,7 @@
 group = it.unibo.alchemist
 artifactId = alchemist-graphql
 projectLongName = Alchemist GraphQL
-projectDescription = Alchemist module that provides GraphQL APIs for simulations
+projectDescription = GraphQL API for Alchemist 
 
 kotlin.code.style=official
 kotlin.mpp.stability.nowarn=true
