fix(build): effectively use Java 17 throughout the build

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 #
-# Copyright (C) 2010-2019, Danilo Pianini and contributors listed in the main project's alchemist/build.gradle file.
+# Copyright (C) 2010-2023, Danilo Pianini and contributors
+# listed, for each module, in the respective subproject's build.gradle.kts file.
 #
 # This file is part of Alchemist, and is distributed under the terms of the
 # GNU General Public License, with a linking exception,
@@ -7,6 +8,7 @@
 #
 projectLongName = Alchemist Simulator
 projectDescription = A simulator for pervasive, aggregate, and nature-inspired computing
+minJavaVersion = 17
 
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=2g -Xmx4g
 systemProp.org.gradle.internal.http.connectionTimeout=500000
