--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -144,6 +144,8 @@ jobs:
               perl -i -pe 's/<meta(\s*\w+\s*=\s*"[^"]*")*(\s*\w+\s*=\s*"https?:\/\/(\w|\/|\.)+")+(\s*\w+\s*=\s*"[^"]*")*>//g'
               # Ignore all tag links
               perl -i -pe 's/<a(\s+class\s*=\s*\"tag-link\"|\s+href\s*=\s*\"(\.\.\/)+tags\/.*\"){2}\s*>.*<\/a>//g'
+              # Ignore generated menu auto-links
+              perl -i -pe 's/\s*<li.*<a\s+class\s*=\s*"padding"\s+href\s*=\s*"\.\.\/\.\.\/\.\.\/.*<\/a>\s*<\/li>//g'
             done
             CHECK_LINKS="docker run --rm -v ""$(pwd)/build/website:/website"" -e GITHUB_TOKEN lycheeverse/lychee:0.10.3 $(echo "$FILES") --exclude-file /website/lycheeignore -m 100 --accept 403,429,500,502,503"
             for i in 1 2 3 4 5; do
