--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -139,7 +139,7 @@ jobs:
               grep -v /tags/ |
               sed -e 's#^build##'
             )"
-            for file in "$FILES"; do
+            for file in $FILES; do
               # Ignore all meta tags containing links
               perl -i -pe 's/<meta(fo\s*\w+\s*=\s*"[^"]*")*(\s*\w+\s*=\s*"https?:\/\/(\w|\/|\.)+")+(\s*\w+\s*=\s*"[^"]*")*>//g' "$file"
               # Ignore all tag links
