docs(maps): add a comment on test source explaining the need for a specific OSM file (possibly causes #2821)

--- a/alchemist-loading/src/test/resources/testgps.yml
+++ b/alchemist-loading/src/test/resources/testgps.yml
@@ -1,6 +1,6 @@
 environment:
   type: OSMEnvironment
-  parameters: ["vcm.pbf", false]
+  parameters: ["vcm.pbf", false] # Requires the file vcm.pbf in the classpath!
 
 incarnation: sapere
 
