--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 antlr4 = "4.13.1"
 apollo ="4.0.0-beta.2"
 arrow = "1.2.1"
-graphhopper = "8.0"
+graphhopper = "9.0-pre1"
 graphql-server = "7.0.2"
 graphql-server-ktor = "7.0.2"
 graphstream = "2.0"
